--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
+# Ignore Gradle project-specific cache directory
 .gradle
-/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# Ignore Gradle build output directory
+build
+!gradle/wrapper/gradle-wrapper.jar
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
-# Cache of project
-.gradletasknamecache
+### STS ###
+.classpath
+.project
+.settings
+history
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+
+## Serenity ##
+target
